--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="/css/main.css" />
 
-    <title>Yash A. Akbari's Blog :-) </title>
+    <title>Aum Bajpayee's Blog </title>
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">WEB325 - Yash A. Akbari's Blog :-)
+          <a class="navbar-brand" href="#">WEB325 - Aum Bajpayee's Blog
           </a>
         </div>
 
